Ensure children with explicit ARIA names participate in name calculation

Child elements with role="presentation" and an explicit ARIA names (e.g.
an aria-label value) were not participating in the name calculation due
to the presentational role trumping the ARIA property value. The ARIA
specification states that global ARIA properties trump the role. Fix
this by having AXObject::DetermineAriaRoleAttribute() return kUnknown
for presentational objects where AXObject::SupportsARIAAttributes()
returns true.

Change name of SupportsARIAAttributes() to HasGlobalARIAAttribute() as
that is what the method appears to for. Also add missing global ARIA
attribute to those being checked. In order to be more performant,
iterate through all attributes and do a string match, removing sanity
checks (e.g. on certain attribute values). This also makes the method
more consistent with its new name, namely just checking the presence
of a global ARIA attribute.

Lastly, ensure that a space character gets inserted between inline
block flow children when the text used for a child comes from a text
alternative, such as an ARIA label, or a title or alt attribute. This
insertion is specified in the Accessible Name and Description Computation
specification and also consistent with what other user agents do.

Bug: 891731
Change-Id: Ib906acc89ea6d0517288fe0d81e0b74f1abfa583
Reviewed-on: https://chromium-review.googlesource.com/c/1259124
Commit-Queue: Joanmarie Diggs <joanmarie.diggs@gmail.com>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597247}
Former-commit-id: 49e966d965cfe01694ca54f41f49c39db0c55199